# RAG-against-the-machines

./: .gitignore  Makefile  README.md  main.py  notes.txt  pyproject.toml
student/: __main__.py  answer.py  answer_dataset.py  index.py  models.py  search.py  search_dataset.py  search_utils.py  test.py
student/classes/: caches.py  configs.py
test/: test.py  test.txt
test/test2/: test2.py
