[project]
name = "rag-against-the-machines"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bm25s>=0.3.9",
    "fire>=0.7.1",
    "langchain>=1.3.11",
    "langchain-text-splitters>=1.1.2",
    "mypy>=2.1.0",
    "pydantic>=2.13.4",
    "torch>=2.12.1",
    "tqdm>=4.68.3",
    "transformers>=5.13.0",
]
