[project]
name = "rag-against-the-machines"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bm25s>=0.3.9",
    "chromadb>=1.5.9",
    "fire>=0.7.1",
    "langchain-text-splitters>=1.1.2",
    "pystemmer>=3.1.0",
    "torch>=2.12.1",
    "transformers>=5.13.0",
]
